# Quadpy

./: LICENSE  Quadpy-Tutorial.ipynb  Quadpy.py  README.md  pyproject.toml
