[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quadpy4"
version = "0.0.1"
authors = [
  { name="Subhasish Guha", email="guhasubhasish@alumni.iitn.ac.in" },
]
description = "A package to calculate the time evolution of the two point correlators of quadratic gaussian hamiltonians and simulate light-matter interaction within structured phoyonic reservoirs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"